--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "taskmaster425",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:5000",
   "dependencies": {
     "@headlessui/react": "^1.7.17",
     "@reduxjs/toolkit": "^1.9.7",
