--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "mongoose": "^7.6.3",
     "mysql": "^2.18.1",
     "react": "^18.2.0",
+    "react-datepicker": "^4.23.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-redux": "^8.1.3",
